--- a/ODF/odf-og.yaml
+++ b/ODF/odf-og.yaml
@@ -1,8 +1,7 @@
 apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
-  name: ocs-og
-  generateName: ocs-
+  name: openshift-storage
   namespace: openshift-storage
 spec:
   targetNamespaces:
