--- a/quay-cr.yaml
+++ b/quay-cr.yaml
@@ -3,3 +3,28 @@ kind: QuayRegistry
 metadata:
   name: container-registry
   namespace: quay
+spec:
+  components:
+    - managed: true
+      kind: clair
+    - managed: true
+      kind: postgres
+    - managed: true
+      kind: objectstorage
+    - managed: true
+      kind: redis
+    - managed: true
+      kind: horizontalpodautoscaler
+    - managed: true
+      kind: route
+    - managed: true
+      kind: mirror
+    - managed: true
+      kind: monitoring
+    - managed: true
+      kind: tls
+    - managed: true
+      kind: quay
+    - managed: true
+      kind: clairpostgres
+  configBundleSecret: quay-config-bundle-secret
