--- a/quay-sub.yaml
+++ b/quay-sub.yaml
@@ -4,7 +4,7 @@ metadata:
   name: quay-operator
   namespace: openshift-operators
 spec:
-  channel: quay-v3.4
+  channel: stable-3.7
   installPlanApproval: Automatic
   name: quay-operator
   source: redhat-operators
